# soulsgen

./: .gitignore  README.md  manage  pyproject.toml  trainer_script.sh
dataset/: expanda.base.cfg
dataset/extension/: pyproject.toml
dataset/extension/extension/: darksouls.py  inspect.py  words.py
dataset/extension/soulsgen/: generate.py
dataset/extension/tests/: test_extension.py
serve-handler/src/: attention.py  feedforward.py  handler.py  model.py  test.py  tokenization.py  transformer.py  vocabulary.py
soulsgen/: create.py  download.py  generate.py  inspect.py  main.py  parse.py  upload.py  utils.py
soulsgen/templates/: template.html
twitter-poster/: .dockerignore  Dockerfile  cronjob.yml  pyproject.toml
twitter-poster/twitter/: main.py
