[tool.poetry]
name = "souls-gen"
version = "0.1.0"
description = ""
authors = ["alexgQQ <alex.grand@beatport.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
numpy = "^1.22.1"
pandas = "^1.4.0"
Expanda = "^1.3.1"
tokenizers = "0.9"
requests-oauthlib = "^1.3.1"
torchserve = "^0.5.2"
Cython = "^0.29.27"
torch-model-archiver = "^0.5.2"
regex = "^2022.1.18"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
soulsgen = {path = "dataset/extension", develop = true}
# The below packages are only installed to support the above package
pyinstrument = "^4.1.1"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
Jinja2 = "^3.0.3"
spacy = "^3.2.3"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
